--- a/index.html
+++ b/index.html
@@ -41,6 +41,67 @@
             </div>
             </div>
         </section>
+        <article id="restaurants">
+            <h2>Restaurants</h2>
+            <div class="flex-container">
+            <article class="img-box flex-item">  
+                <a target="_blank" href="#">
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                </a>
+                <div class="flex-row">
+                  <div class="description-flex-item">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                    </div>
+                    <div class="icon-flex-item">
+                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                    </div>
+                </div> 
+            </article>
+            <article class="img-box flex-item">
+                <a target="_blank" href="#">
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                </a>
+                <div class="flex-row">
+                   <div class="description-flex-item">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                    </div>
+                    <div class="icon-flex-item">
+                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                    </div>
+                </div>
+            </article>
+            <article class="img-box flex-item">
+                <a target="_blank" href="#">
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                </a>
+                <div class="flex-row">
+                   <div class="description-flex-item">
+                        <h3>A la française</h3>
+                        <p>Cité Rouge</p>
+                    </div>
+                    <div class="icon-flex-item">
+                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                    </div>
+                </div>
+            </article>
+            <article class="img-box flex-item">
+                <a target="_blank" href="#">
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La délice des sens">
+                </a>
+                <div class="flex-row">
+                   <div class="description-flex-item">
+                        <h3>La délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                    </div>
+                    <div class="icon-flex-item">
+                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                    </div>
+                </div>
+            </article>
+            </div>
+        </article>
     </main>
 </body>
 </html>
