--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&family=Roboto:wght@100;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Oh My Food</title>
 </head>
 <body>
     <header class="flex-container">
-        <div class="flex-item logo">
+        <div class="flex-item header--logo">
         <img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150px">
         </div>
         <div class="flex-item position flex-row">
@@ -103,5 +103,22 @@
             </div>
         </article>
     </main>
+    <footer class="flex-container">
+        <div class="flex-item">
+            <img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100px">
+            <div>
+                <a target="_blank" href="#"><img src="./images/icons/utensils-solid.svg" alt="Proposer un restaurant" width="12px"> Proposer un restaurant</a>
+            </div>
+            <div>
+                <a target="_blank" href="#"><img src="./images/icons/handshake-angle-solid.svg" alt="Devenir partenaire" width="12px"> Devenir partenaire</a>
+            </div>
+        </div>
+        <div class="flex-item">
+            <a target="_blank" href="#">Mentions légales</a>
+        </div>
+        <div class="flex-item">
+            <a target="_blank" href="#">Contact</a>
+        </div>
+    </footer>
 </body>
 </html>
