--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Oh My Food</title>
 </head>
 <body>
-    <header class="flex-container">
+    <div id="loader"><div class="loader"></div></div>
+    <header class="flex-container">   
         <div class="flex-item header--logo">
         <img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150px">
         </div>
@@ -21,7 +22,7 @@
             <p><i class="bi bi-geo-alt-fill"></i>Paris, Belleville</p>
         </div>
     </header>
-    <main>
+    <main>  
         <section id="reserve">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionés par nos soins.</p>
@@ -48,6 +49,7 @@
                 <a target="_blank" href="#">
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                 </a>
+                <button class="new-tag">Nouveau</button>
                 <div class="flex-row">
                   <div class="description-flex-item">
                         <h3>La palette du goût</h3>
@@ -62,6 +64,7 @@
                 <a target="_blank" href="#">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 </a>
+                <button class="new-tag">Nouveau</button>
                 <div class="flex-row">
                    <div class="description-flex-item">
                         <h3>La note enchantée</h3>
@@ -117,7 +120,7 @@
             <a target="_blank" href="#">Mentions légales</a>
         </div>
         <div class="flex-item">
-            <a target="_blank" href="#">Contact</a>
+            <a target="_blank" href="mailto: contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
