finish menu courses and footer, to finish: animation item appears one by one

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -15,10 +15,10 @@
 <body>
     <header class="menu__header flex-row">
         <div class="header__icon">
-        <i class="bi bi-arrow-left-short"></i>
+            <a target="_blank" href="index.html"><i class="bi bi-arrow-left-short"></i></a>
         </div>
         <div class="header__logo">
-        <a target="_blank" href="#"><img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150px"></a>
+            <img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150px">
         </div>
     </header>
     <main>
@@ -34,15 +34,171 @@
             <a class="heart-icon" target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
             </div>
             </div>
-            <article class="menu--starter">
+            <article class="menu--courses">
                 <h2>ENTRÉES</h2>
                 <hr>
-                <div class="dish-box">
-
+                <div class="flex-container">
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>25€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
                 </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>35€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Soupe à l'oignon</h3>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>20€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+            </div>
             </article>
-
+            <article class="menu--courses">
+                <h2>PLATS</h2>
+                <hr>
+                <div class="flex-container">
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>40€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>35€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>44€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            </article>
+            <article class="menu--courses">
+                <h2>DESSERTS</h2>
+                <hr>
+                <div class="flex-container">
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>18€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>22€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish-box flex-item">
+                    <div class="dish-desc flex-row">
+                        <div class="flex-item-left">
+                            <h3>Millefeuille croustillant</h3>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="flex-item-right">
+                            <p>23€</p>
+                        </div>
+                        <button class="check-button" type="button">
+                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            </article>
+            <div class="button__submit">
+            <button class="button--order" type="submit">Commander</button>
+            </div>
         </article>
     </main>
+    <footer id="menu__footer" class="flex-container">
+        <div class="flex-item">
+            <img class="footer--logo" src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100px">
+            <div>
+                <a target="_blank" href="#"><img src="./images/icons/utensils-solid.svg" alt="Proposer un restaurant" width="12px"> Proposer un restaurant</a>
+            </div>
+            <div>
+                <a target="_blank" href="#"><img src="./images/icons/handshake-angle-solid.svg" alt="Devenir partenaire" width="12px"> Devenir partenaire</a>
+            </div>
+        </div>
+        <div class="flex-item">
+            <a target="_blank" href="#">Mentions légales</a>
+        </div>
+        <div class="flex-item">
+            <a target="_blank" href="mailto: contact@ohmyfood.com">Contact</a>
+        </div>
+    </footer>
 </body>
 </html>
