--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/703ea3752e.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
 <body id="home">
     <div id="loader"><div class="loader"></div></div>
     <header id="header-home" class="flex-container">   
         <div class="flex-item header--logo">
-        <a target="_blank" href="#"><img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150px"></a>
+        <a target="_blank" href="#"><img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150"></a>
         </div>
         <div class="flex-item location flex-row">
             <p><i class="bi bi-geo-alt-fill"></i>Paris, Belleville</p>
@@ -26,19 +26,19 @@
         <section id="reserve">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionés par nos soins.</p>
-            <div><a target="_blank" href="#"><button type="button">Explorer nos restaurant</button></a></div>
+            <div><a target="_blank" href="#" class="button">Explorer nos restaurant</a></div>
         </section>
         <section id="fonctioning">
             <h2>Fonctionnement</h2>
             <div class="flex-container">
             <div class="flex-item">
-                <a target="_blank" href="#"><button class="flex-row pill-corner"><span class="round-corner">1</span><i class="bi bi-phone"></i>Choissisez un restaurant</button></a>
+                <a target="_blank" href="#" class="button flex-row pill-corner"><span class="round-corner">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choissisez un restaurant</a>
             </div>
             <div class="flex-item">
-                <a target="_blank" href="#"><button class="flex-row pill-corner"><span class="round-corner">2</span><i class="bi bi-list-ul"></i>Composez votre menu</button></a>
+                <a target="_blank" href="#" class="button flex-row pill-corner"><span class="round-corner">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
             </div>
             <div class="flex-item">
-                <a target="_blank" href="#"><button class="flex-row pill-corner"><span class="round-corner">3</span><i class="bi bi-shop-window"></i>Dégustez au restaurant</button></a>
+                <a target="_blank" href="#" class="button flex-row pill-corner"><span class="round-corner">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
             </div>
             </div>
         </section>
@@ -56,7 +56,7 @@
                         <p>Ménilmontant</p>
                     </div>
                     <div class="icon-flex-item">
-                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                        <a target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                     </div>
                 </div> 
             </article>
@@ -71,7 +71,7 @@
                         <p>Charonne</p>
                     </div>
                     <div class="icon-flex-item">
-                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                        <a target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                     </div>
                 </div>
             </article>
@@ -85,7 +85,7 @@
                         <p>Cité Rouge</p>
                     </div>
                     <div class="icon-flex-item">
-                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                        <a target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                     </div>
                 </div>
             </article>
@@ -99,7 +99,7 @@
                         <p>Folie-Méricourt</p>
                     </div>
                     <div class="icon-flex-item">
-                        <a target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+                        <a target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                     </div>
                 </div>
             </article>
@@ -108,19 +108,19 @@
     </main>
     <footer class="flex-container">
         <div class="flex-item">
-            <img class="footer--logo" src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100px">
+            <img class="footer--logo" src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100">
             <div>
-                <a target="_blank" href="#"><img src="./images/icons/utensils-solid.svg" alt="Proposer un restaurant" width="12px"> Proposer un restaurant</a>
+                <a target="_blank" href="#"><span class="footer__icon"><i class="fa-solid fa-utensils"></i></span>Proposer un restaurant</a>
             </div>
             <div>
-                <a target="_blank" href="#"><img src="./images/icons/handshake-angle-solid.svg" alt="Devenir partenaire" width="12px"> Devenir partenaire</a>
+                <a target="_blank" href="#"><span class="footer__icon"><i class="fa-solid fa-handshake-angle"></i></span>Devenir partenaire</a>
             </div>
         </div>
         <div class="flex-item">
             <a target="_blank" href="#">Mentions légales</a>
         </div>
         <div class="flex-item">
-            <a target="_blank" href="mailto: contact@ohmyfood.com">Contact</a>
+            <a target="_blank" href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
