--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/703ea3752e.js" crossorigin="anonymous"></script>
     <title>À la française</title>
 </head>
 <body>
     <header class="menu__header flex-row">
         <div class="header__icon">
-            <a target="_blank" href="index.html"><i class="bi bi-arrow-left-short"></i></a>
+            <a target="_blank" href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
         <div class="header__logo">
-            <img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150px">
+            <img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150">
         </div>
     </header>
     <main>
-        <section>
+        <div>
             <img class="menu__img" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-        </section>
+        </div>
         <article class="menu__article">
             <div class="flex-row">
             <div class="article__h1">
             <h1>À la française</h1>
             </div>
             <div class="article--heart-icon">
-            <a class="heart-icon" target="_blank" href="#"><i class="bi bi-heart"></i><i class="bi bi-heart-fill"></i></a>
+            <a class="heart-icon" target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
             </div>
             </div>
             <article class="menu--courses">
@@ -47,9 +47,7 @@
                         <div class="flex-item-right">
                             <p>25€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
                 <div class="dish-box flex-item">
@@ -61,9 +59,7 @@
                         <div class="flex-item-right">
                             <p>35€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
                 <div class="dish-box flex-item">
@@ -75,9 +71,7 @@
                         <div class="flex-item-right">
                             <p>20€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
             </div>
@@ -95,9 +89,7 @@
                         <div class="flex-item-right">
                             <p>40€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
                 <div class="dish-box flex-item">
@@ -109,9 +101,7 @@
                         <div class="flex-item-right">
                             <p>35€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
                 <div class="dish-box flex-item">
@@ -123,9 +113,7 @@
                         <div class="flex-item-right">
                             <p>44€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
             </div>
@@ -143,9 +131,7 @@
                         <div class="flex-item-right">
                             <p>18€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
                 <div class="dish-box flex-item">
@@ -157,9 +143,7 @@
                         <div class="flex-item-right">
                             <p>22€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
                 <div class="dish-box flex-item">
@@ -171,9 +155,7 @@
                         <div class="flex-item-right">
                             <p>23€</p>
                         </div>
-                        <button class="check-button" type="button">
-                            <a class="icon-block"><i class="bi bi-check-lg"></i></a>
-                        </button>
+                        <a class="check-button icon-block"><i class="fa-solid fa-check"></i></a>
                     </div>
                 </div>
             </div>
@@ -185,19 +167,19 @@
     </main>
     <footer id="menu__footer" class="flex-container">
         <div class="flex-item">
-            <img class="footer--logo" src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100px">
+            <img class="footer--logo" src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100">
             <div>
-                <a target="_blank" href="#"><img src="./images/icons/utensils-solid.svg" alt="Proposer un restaurant" width="12px"> Proposer un restaurant</a>
+                <a target="_blank" href="#"><span class="footer__icon"><i class="fa-solid fa-utensils"></i></span>Proposer un restaurant</a>
             </div>
             <div>
-                <a target="_blank" href="#"><img src="./images/icons/handshake-angle-solid.svg" alt="Devenir partenaire" width="12px"> Devenir partenaire</a>
+                <a target="_blank" href="#"><span class="footer__icon"><i class="fa-solid fa-handshake-angle"></i></span>Devenir partenaire</a>
             </div>
         </div>
         <div class="flex-item">
             <a target="_blank" href="#">Mentions légales</a>
         </div>
         <div class="flex-item">
-            <a target="_blank" href="mailto: contact@ohmyfood.com">Contact</a>
+            <a target="_blank" href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
