--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -15,10 +15,10 @@
 <body>
     <header class="menu__header flex-row">
         <div class="header__icon">
-            <a target="_blank" href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
         <div class="header__logo">
-            <a target="_blank" href="index.html"><img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150"></a>
+            <a href="index.html"><img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150"></a>
         </div>
     </header>
     <main>
@@ -31,7 +31,7 @@
             <h1>La note enchantée</h1>
             </div>
             <div class="article--heart-icon">
-            <a class="heart-icon" target="_blank" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
+            <a class="heart-icon" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
             </div>
             </div>
             <article class="menu--courses">
@@ -181,17 +181,17 @@
         <div class="flex-item">
             <img class="footer--logo" src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="100">
             <div>
-                <a target="_blank" href="#"><span class="footer__icon"><i class="fa-solid fa-utensils"></i></span>Proposer un restaurant</a>
+                <a href="#"><span class="footer__icon"><i class="fa-solid fa-utensils"></i></span>Proposer un restaurant</a>
             </div>
             <div>
-                <a target="_blank" href="#"><span class="footer__icon"><i class="fa-solid fa-handshake-angle"></i></span>Devenir partenaire</a>
+                <a href="#"><span class="footer__icon"><i class="fa-solid fa-handshake-angle"></i></span>Devenir partenaire</a>
             </div>
         </div>
         <div class="flex-item">
-            <a target="_blank" href="#">Mentions légales</a>
+            <a href="#">Mentions légales</a>
         </div>
         <div class="flex-item">
-            <a target="_blank" href="mailto:contact@ohmyfood.com">Contact</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
