--- a/index.html
+++ b/index.html
@@ -19,92 +19,91 @@
         <a href="#"><img src="./images/logo/ohmyfood.png" alt="Oh My Food logo" width="150"></a>
         </div>
         <div class="flex-item location flex-row">
-            <p><i class="bi bi-geo-alt-fill"></i>Paris, Belleville</p>
+            <i class="fa-solid fa-location-dot"></i>
+            <form><input type="text" id="location" name="location" value="Paris, Belleville"></form>
         </div>
     </header>
-    <main>  
-        <section id="reserve">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, sélectionés par nos soins.</p>
-            <div><a href="#" class="button">Explorer nos restaurant</a></div>
-        </section>
-        <section id="fonctioning">
-            <h2>Fonctionnement</h2>
-            <div class="flex-container">
-            <div class="flex-item">
-                <a href="#" class="button flex-row pill-corner"><span class="round-corner">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choissisez un restaurant</a>
-            </div>
-            <div class="flex-item">
-                <a href="#" class="button flex-row pill-corner"><span class="round-corner">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
-            </div>
-            <div class="flex-item">
-                <a href="#" class="button flex-row pill-corner"><span class="round-corner">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
-            </div>
-            </div>
-        </section>
-        <article id="restaurants">
-            <h2>Restaurants</h2>
-            <div class="flex-container">
-            <article class="article--img-box flex-item">  
-                <a href="menu-la-palette-du-gout.html">
-                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                </a>
-                <button class="new-tag">Nouveau</button>
-                <div class="flex-row">
-                  <div class="description-flex-item">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                    </div>
-                    <div class="icon-flex-item">
-                        <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
-                    </div>
-                </div> 
-            </article>
-            <article class="article--img-box flex-item">
-                <a href="menu-la-note-enchantee.html">
-                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                </a>
-                <button class="new-tag">Nouveau</button>
-                <div class="flex-row">
-                   <div class="description-flex-item">
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                    </div>
-                    <div class="icon-flex-item">
-                        <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
-                    </div>
+    <section id="reserve">
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, sélectionés par nos soins.</p>
+        <div><a href="#" class="button">Explorer nos restaurant</a></div>
+    </section>
+    <section id="fonctioning">
+        <h2>Fonctionnement</h2>
+        <div class="flex-container">
+        <div class="flex-item">
+            <a href="#" class="button flex-row pill-corner"><span class="round-corner">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choissisez un restaurant</a>
+        </div>
+        <div class="flex-item">
+            <a href="#" class="button flex-row pill-corner"><span class="round-corner">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</a>
+        </div>
+        <div class="flex-item">
+            <a href="#" class="button flex-row pill-corner"><span class="round-corner">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
+        </div>
+        </div>
+    </section>
+    <main id="restaurants">
+        <h2>Restaurants</h2>
+        <div class="flex-container">
+        <article class="article--img-box flex-item">  
+            <a href="menu-la-palette-du-gout.html">
+                <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+            </a>
+            <button class="new-tag">Nouveau</button>
+            <div class="flex-row">
+                <div class="description-flex-item">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
                 </div>
-            </article>
-            <article class="article--img-box flex-item">
-                <a href="menu-a-la-francaise.html">
-                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                </a>
-                <div class="flex-row">
-                   <div class="description-flex-item">
-                    <a href="menu-a-la-francaise.html"><h3>A la française</h3></a>
-                        <p>Cité Rouge</p>
-                    </div>
-                    <div class="icon-flex-item">
-                        <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
-                    </div>
+                <div class="icon-flex-item">
+                    <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                 </div>
-            </article>
-            <article class="article--img-box flex-item">
-                <a href="menu-le-delice-des-sens.html">
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                </a>
-                <div class="flex-row">
-                   <div class="description-flex-item">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                    </div>
-                    <div class="icon-flex-item">
-                        <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
-                    </div>
+            </div> 
+        </article>
+        <article class="article--img-box flex-item">
+            <a href="menu-la-note-enchantee.html">
+                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+            </a>
+            <button class="new-tag">Nouveau</button>
+            <div class="flex-row">
+                <div class="description-flex-item">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
                 </div>
-            </article>
+                <div class="icon-flex-item">
+                    <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
+                </div>
             </div>
         </article>
+        <article class="article--img-box flex-item">
+            <a href="menu-a-la-francaise.html">
+                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+            </a>
+            <div class="flex-row">
+                <div class="description-flex-item">
+                <a href="menu-a-la-francaise.html"><h3>A la française</h3></a>
+                    <p>Cité Rouge</p>
+                </div>
+                <div class="icon-flex-item">
+                    <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
+                </div>
+            </div>
+        </article>
+        <article class="article--img-box flex-item">
+            <a href="menu-le-delice-des-sens.html">
+                <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+            </a>
+            <div class="flex-row">
+                <div class="description-flex-item">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                </div>
+                <div class="icon-flex-item">
+                    <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
+                </div>
+            </div>
+        </article>
+        </div>
     </main>
     <footer class="flex-container">
         <div class="flex-item">
