--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -25,7 +25,7 @@
         <div>
             <img class="menu__img" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         </div>
-        <article class="menu__article">
+        <section class="menu__article">
             <div class="flex-row">
             <div class="article__h1">
             <h1>À la française</h1>
@@ -163,7 +163,7 @@
             <div class="button__submit">
             <button class="button--order" type="submit">Commander</button>
             </div>
-        </article>
+        </section>
     </main>
     <footer id="menu__footer" class="flex-container">
         <div class="flex-item">
