--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -25,7 +25,7 @@
         <div>
             <img class="menu__img" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
         </div>
-        <article class="menu__article">
+        <section class="menu__article">
             <div class="flex-row">
             <div class="article__h1">
             <h1>La note enchantée</h1>
@@ -175,7 +175,7 @@
             <div class="button__submit">
             <button class="button--order" type="submit">Commander</button>
             </div>
-        </article>
+        </section>
     </main>
     <footer id="menu__footer" class="flex-container">
         <div class="flex-item">
