--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -25,7 +25,7 @@
         <div>
             <img class="menu__img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
         </div>
-        <article class="menu__article">
+        <section class="menu__article">
             <div class="flex-row">
             <div class="article__h1">
             <h1>La palette du goût</h1>
@@ -163,7 +163,7 @@
             <div class="button__submit">
             <button class="button--order" type="submit">Commander</button>
             </div>
-        </article>
+        </section>
     </main>
     <footer id="menu__footer" class="flex-container">
         <div class="flex-item">
