--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -25,8 +25,8 @@
         <div>
             <img class="menu__img" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
         </div>
-        <article class="menu__article">
-            <div class="flex-row">
+        <section class="menu__article">
+            <div class="flex-row align-items-end">
             <div class="article__h1">
             <h1>Le délice des sens</h1>
             </div>
@@ -163,7 +163,7 @@
             <div class="button__submit">
             <button class="button--order" type="submit">Commander</button>
             </div>
-        </article>
+        </section>
     </main>
     <footer id="menu__footer" class="flex-container">
         <div class="flex-item">
