modify heart icon position in menu pages

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -26,7 +26,7 @@
             <img class="menu__img" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
         </div>
         <section class="menu__article">
-            <div class="flex-row">
+            <div class="flex-row align-items-end">
             <div class="article__h1">
             <h1>À la française</h1>
             </div>
