--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -26,7 +26,7 @@
             <img class="menu__img" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
         </div>
         <section class="menu__article">
-            <div class="flex-row">
+            <div class="flex-row align-items-end">
             <div class="article__h1">
             <h1>La note enchantée</h1>
             </div>
