--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -26,7 +26,7 @@
             <img class="menu__img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
         </div>
         <section class="menu__article">
-            <div class="flex-row">
+            <div class="flex-row align-items-end">
             <div class="article__h1">
             <h1>La palette du goût</h1>
             </div>
