--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                 </div>
-                <div class="icon-flex-item">
+                <div class="icon-flex-item heart-icon-block">
                     <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                 </div>
             </div> 
@@ -70,7 +70,7 @@
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                 </div>
-                <div class="icon-flex-item">
+                <div class="icon-flex-item heart-icon-block">
                     <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 <a href="menu-a-la-francaise.html"><h3>A la française</h3></a>
                     <p>Cité Rouge</p>
                 </div>
-                <div class="icon-flex-item">
+                <div class="icon-flex-item heart-icon-block">
                     <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
                 </div>
-                <div class="icon-flex-item">
+                <div class="icon-flex-item heart-icon-block">
                     <a href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
                 </div>
             </div>
