--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -30,7 +30,7 @@
             <div class="article__h1">
             <h1>La note enchantée</h1>
             </div>
-            <div class="article--heart-icon">
+            <div class="article--heart-icon heart-icon-block">
             <a class="heart-icon" href="#"><i class="fa-regular fa-heart empty-heart-icon"></i><i class="fa-sharp fa-solid fa-heart fill-heart-icon"></i></a>
             </div>
             </div>
